# django-backend-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING_DEV.md  Makefile  README.md  README_ES.md  conftest.py  pyproject.toml  pytest.ini
apps/core/: admin.py  admin_mixins.py  api.py  models.py  serializers.py  urls.py  utils.py
apps/core/management/commands/: setup_roles.py  startapp_in_apps.py
apps/core/migrations/: 0001_initial.py  0002_default_roleimagelimits.py  0003_role_text_limits.py
apps/core/tests/: test_limits_api.py  test_rbac.py  test_role_text_limits.py  test_user_text_limits.py
apps/subscriptions/: admin.py  models.py  services.py  tests.py  tests_nowpayments.py  tests_payment.py  urls.py  views.py
apps/subscriptions/management/commands/: init_payment_methods.py
apps/subscriptions/migrations/: 0001_initial.py  0002_paymentmethod_subscription_external_id_and_more.py
apps/subscriptions/tests/: test_enriched_currencies.py  test_nowpayments_tokens.py
config/: settings.py  urls.py
docs/: CONTRIBUTING.md  CONTRIBUTING_ES.md  CRYPTO_ENRICHED_UI.md  SECURITY.md  SUBSCRIPTIONS.md  multilanguage_setup_EN.md  multilanguage_setup_ES.md
docs/commands/: startapp_in_apps_EN.md  startapp_in_apps_ES.md
locale/es/LC_MESSAGES/: django.po
scripts/: run-tests.sh
templates/account/: login.html  logout.html  signup.html
templates/admin/: base_site.html
templates/subscriptions/: crypto_selection.html  pricing.html
tests/smoke/: test_smoke.py
